// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Design System — Component Snapshots > Badge > all variants > badge-completed 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgba(255, 255, 255, 0.92); color: rgb(22, 128, 60); border: 1px solid rgba(22, 128, 60, 0.267); white-space: nowrap; user-select: none;"
>
  completed
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-error 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(200, 32, 32); color: rgb(244, 244, 248); white-space: nowrap; user-select: none;"
>
  error
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-info 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(0, 104, 168); color: rgb(244, 244, 248); white-space: nowrap; user-select: none;"
>
  info
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-neutral 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); white-space: nowrap; user-select: none;"
>
  neutral
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-pending 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgba(255, 255, 255, 0.92); color: rgb(160, 112, 0); border: 1px solid rgba(160, 112, 0, 0.267); white-space: nowrap; user-select: none;"
>
  pending
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-processing 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(224, 224, 232); color: rgb(0, 136, 110); border: 1px solid rgba(0, 136, 110, 0.267); white-space: nowrap; user-select: none;"
>
  processing
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-running 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(224, 224, 232); color: rgb(0, 136, 110); border: 1px solid rgba(0, 136, 110, 0.267); white-space: nowrap; user-select: none;"
>
  running
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-success 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(22, 128, 60); color: rgb(244, 244, 248); white-space: nowrap; user-select: none;"
>
  success
</span>
`;

exports[`Design System — Component Snapshots > Badge > all variants > badge-warning 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 2px 8px; font-size: 0.6875rem; font-weight: 500; border-radius: 9999px; background: rgb(160, 112, 0); color: rgb(244, 244, 248); white-space: nowrap; user-select: none;"
>
  warning
</span>
`;

exports[`Design System — Component Snapshots > Button > all sizes > button-size-lg 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 48px; padding-inline: 20px; font-size: 0.875rem; font-weight: 600; font-family: inherit; border-radius: 16px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Size 
    lg
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all sizes > button-size-md 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Size 
    md
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all sizes > button-size-sm 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 36px; padding-inline: 12px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 8px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Size 
    sm
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all sizes > button-size-xl 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 56px; padding-inline: 24px; font-size: 0.875rem; font-weight: 600; font-family: inherit; border-radius: 16px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Size 
    xl
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all sizes > button-size-xs 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 32px; padding-inline: 8px; font-size: 0.6875rem; font-weight: 600; font-family: inherit; border-radius: 8px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Size 
    xs
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-danger 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(200, 32, 32); color: rgb(244, 244, 248);"
>
  <span>
    danger
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-ghost 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: transparent; color: rgb(74, 74, 92);"
>
  <span>
    ghost
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-link 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: transparent; color: rgb(0, 136, 110);"
>
  <span>
    link
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-outline 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: transparent; color: rgb(0, 136, 110); border: 1px solid rgba(0, 136, 110, 0.25);"
>
  <span>
    outline
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-primary 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    primary
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-secondary 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgba(255, 255, 255, 0.92); color: rgb(26, 26, 36); border: 1px solid rgb(212, 212, 220);"
>
  <span>
    secondary
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-success 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(22, 128, 60); color: rgb(244, 244, 248);"
>
  <span>
    success
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > all variants > button-warning 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(160, 112, 0); color: rgb(244, 244, 248);"
>
  <span>
    warning
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > disabled state 1`] = `
<button
  aria-busy="false"
  disabled=""
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: not-allowed; opacity: 0.5; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > full width 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); width: 100%; white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Full Width
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > loading state 1`] = `
<button
  aria-busy="true"
  disabled=""
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: not-allowed; opacity: 0.5; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span
    style="width: 0.8125rem; height: 0.8125rem; border: 2px solid currentcolor; border-top-color: transparent; border-radius: 50%; animation: spin 0.6s linear infinite; display: inline-block;"
  />
  <span>
    Loading
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > primary variant 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span>
    Primary
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Button > with icon 1`] = `
<button
  aria-busy="false"
  style="display: inline-flex; align-items: center; justify-content: center; gap: 4px; height: 44px; padding-inline: 16px; font-size: 0.8125rem; font-weight: 600; font-family: inherit; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); white-space: nowrap; outline: none; position: relative; z-index: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  <span
    style="display: inline-flex;"
  >
    ★
  </span>
  <span>
    Icon
  </span>
</button>
`;

exports[`Design System — Component Snapshots > Card > all variants > card-elevated 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: rgba(255, 255, 255, 0.92);"
>
  Card 
  elevated
</div>
`;

exports[`Design System — Component Snapshots > Card > all variants > card-glass 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220);"
>
  Card 
  glass
</div>
`;

exports[`Design System — Component Snapshots > Card > all variants > card-interactive 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: rgb(224, 224, 232); border: 1px solid rgb(212, 212, 220); cursor: pointer;"
>
  Card 
  interactive
</div>
`;

exports[`Design System — Component Snapshots > Card > all variants > card-outlined 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: transparent; border: 1px solid rgb(212, 212, 220);"
>
  Card 
  outlined
</div>
`;

exports[`Design System — Component Snapshots > Card > all variants > card-surface 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220);"
>
  Card 
  surface
</div>
`;

exports[`Design System — Component Snapshots > Card > hoverable 1`] = `
<div
  style="border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1), transform 0.2s ease; background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220);"
>
  Hoverable
</div>
`;

exports[`Design System — Component Snapshots > Chip > all variants > chip-clickable 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); cursor: pointer; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  clickable
</span>
`;

exports[`Design System — Component Snapshots > Chip > all variants > chip-filter 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); cursor: pointer; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  filter
  <span
    style="margin-left: 4px; opacity: 0.5;"
  >
    ×
  </span>
</span>
`;

exports[`Design System — Component Snapshots > Chip > all variants > chip-selectable 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); cursor: pointer; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  selectable
</span>
`;

exports[`Design System — Component Snapshots > Chip > all variants > chip-status 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); cursor: default; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  status
</span>
`;

exports[`Design System — Component Snapshots > Chip > all variants > chip-tag 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(255, 255, 255, 0.92); color: rgb(74, 74, 92); border: 1px solid rgb(212, 212, 220); cursor: default; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  tag
  <span
    style="margin-left: 4px; opacity: 0.5;"
  >
    ×
  </span>
</span>
`;

exports[`Design System — Component Snapshots > Chip > selected state 1`] = `
<span
  style="display: inline-flex; align-items: center; gap: 4px; padding: 4px 8px; border-radius: 9999px; font-size: 0.75rem; font-weight: 500; background: rgba(0, 136, 110, 0.1); color: rgb(0, 136, 110); border: 1px solid rgba(0, 136, 110, 0.25); cursor: pointer; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); user-select: none;"
>
  Selected
</span>
`;

exports[`Design System — Component Snapshots > EmptyState > with description and action 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 32px; text-align: center; gap: 8px;"
>
  <div
    style="font-size: 2.5rem; margin-bottom: 4px; opacity: 0.6;"
  >
    📦
  </div>
  <p
    style="font-size: 1rem; font-weight: 700; color: rgb(26, 26, 36); margin: 0px;"
  >
    No items
  </p>
  <p
    style="font-size: 0.875rem; color: rgb(124, 124, 144); margin: 0px; max-width: 280px; line-height: 1.5;"
  >
    Try again later.
  </p>
  <div
    style="margin-top: 8px;"
  >
    <button>
      Retry
    </button>
  </div>
</div>
`;

exports[`Design System — Component Snapshots > EmptyState > with icon and title 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 32px; text-align: center; gap: 8px;"
>
  <div
    style="font-size: 2.5rem; margin-bottom: 4px; opacity: 0.6;"
  >
    🔍
  </div>
  <p
    style="font-size: 1rem; font-weight: 700; color: rgb(26, 26, 36); margin: 0px;"
  >
    Nothing here
  </p>
</div>
`;

exports[`Design System — Component Snapshots > Heading > all variants > heading-display 1`] = `
<h1
  style="font-family: "IBM Plex Sans", system-ui, -apple-system, sans-serif; font-size: 2rem; font-weight: 700; line-height: 1.2; letter-spacing: -0.02em; color: rgb(26, 26, 36); margin: 0px;"
>
  Heading 
  display
</h1>
`;

exports[`Design System — Component Snapshots > Heading > all variants > heading-h1 1`] = `
<h1
  style="font-family: "IBM Plex Sans", system-ui, -apple-system, sans-serif; font-size: 1.375rem; font-weight: 700; line-height: 1.2; letter-spacing: -0.02em; color: rgb(26, 26, 36); margin: 0px;"
>
  Heading 
  h1
</h1>
`;

exports[`Design System — Component Snapshots > Heading > all variants > heading-h2 1`] = `
<h2
  style="font-family: "IBM Plex Sans", system-ui, -apple-system, sans-serif; font-size: 1.125rem; font-weight: 600; line-height: 1.2; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  Heading 
  h2
</h2>
`;

exports[`Design System — Component Snapshots > Heading > all variants > heading-h3 1`] = `
<h3
  style="font-family: "IBM Plex Sans", system-ui, -apple-system, sans-serif; font-size: 1rem; font-weight: 600; line-height: 1.2; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  Heading 
  h3
</h3>
`;

exports[`Design System — Component Snapshots > IconButton > all sizes > iconbutton-size-lg 1`] = `
<button
  aria-label="size-lg"
  style="display: inline-flex; align-items: center; justify-content: center; width: 48px; height: 48px; font-size: 0.9375rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(74, 74, 92);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > all sizes > iconbutton-size-md 1`] = `
<button
  aria-label="size-md"
  style="display: inline-flex; align-items: center; justify-content: center; width: 40px; height: 40px; font-size: 0.875rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(74, 74, 92);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > all sizes > iconbutton-size-sm 1`] = `
<button
  aria-label="size-sm"
  style="display: inline-flex; align-items: center; justify-content: center; width: 32px; height: 32px; font-size: 0.6875rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(74, 74, 92);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > all variants > iconbutton-ghost 1`] = `
<button
  aria-label="ghost"
  style="display: inline-flex; align-items: center; justify-content: center; width: 40px; height: 40px; font-size: 0.875rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(74, 74, 92);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > all variants > iconbutton-outline 1`] = `
<button
  aria-label="outline"
  style="display: inline-flex; align-items: center; justify-content: center; width: 40px; height: 40px; font-size: 0.875rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(0, 136, 110); border: 1px solid rgba(0, 136, 110, 0.25);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > all variants > iconbutton-solid 1`] = `
<button
  aria-label="solid"
  style="display: inline-flex; align-items: center; justify-content: center; width: 40px; height: 40px; font-size: 0.875rem; border-radius: 12px; cursor: pointer; opacity: 1; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: rgb(0, 136, 110); color: rgb(244, 244, 248);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > IconButton > disabled 1`] = `
<button
  aria-label="disabled"
  disabled=""
  style="display: inline-flex; align-items: center; justify-content: center; width: 40px; height: 40px; font-size: 0.875rem; border-radius: 12px; cursor: not-allowed; opacity: 0.5; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1); flex-shrink: 0; background: transparent; color: rgb(74, 74, 92);"
>
  ★
</button>
`;

exports[`Design System — Component Snapshots > Input > default 1`] = `
<input
  placeholder="Enter text..."
  style="width: 100%; padding: 8px 12px; font-size: 0.875rem; font-family: inherit; color: rgb(26, 26, 36); background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220); border-radius: 12px; outline: none; transition: border-color 150ms, box-shadow 150ms; box-sizing: border-box;"
/>
`;

exports[`Design System — Component Snapshots > Input > disabled 1`] = `
<input
  disabled=""
  style="width: 100%; padding: 8px 12px; font-size: 0.875rem; font-family: inherit; color: rgb(26, 26, 36); background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220); border-radius: 12px; outline: none; transition: border-color 150ms, box-shadow 150ms; box-sizing: border-box; opacity: 0.5; cursor: not-allowed;"
  value="Disabled"
/>
`;

exports[`Design System — Component Snapshots > Input > error state 1`] = `
<input
  placeholder="Error"
  style="width: 100%; padding: 8px 12px; font-size: 0.875rem; font-family: inherit; color: rgb(26, 26, 36); background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(200, 32, 32); border-radius: 12px; outline: none; transition: border-color 150ms, box-shadow 150ms; box-sizing: border-box;"
/>
`;

exports[`Design System — Component Snapshots > Layout > Divider 1`] = `
<div
  aria-hidden="true"
  style="width: 100%; height: 1px; background-color: rgb(212, 212, 220); flex-shrink: 0;"
/>
`;

exports[`Design System — Component Snapshots > Layout > Flex 1`] = `
<div
  style="display: flex; flex-direction: row; align-items: center; justify-content: flex-start; gap: 8px; flex-wrap: nowrap;"
>
  <div>
    A
  </div>
  <div>
    B
  </div>
</div>
`;

exports[`Design System — Component Snapshots > Layout > Section 1`] = `
<section
  style="margin-top: 20px;"
>
  <h2
    style="font-size: 0.6875rem; font-weight: 600; letter-spacing: 0.1em; text-transform: uppercase; color: rgb(124, 124, 144); margin-bottom: 8px; padding-left: 2px;"
  >
    Test Section
  </h2>
  <div>
    Content
  </div>
</section>
`;

exports[`Design System — Component Snapshots > Layout > Stack 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: stretch; justify-content: flex-start; gap: 12px; flex-wrap: nowrap;"
>
  <div>
    A
  </div>
  <div>
    B
  </div>
</div>
`;

exports[`Design System — Component Snapshots > Loader > all sizes > loader-lg 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  role="status"
  style="width: 36px; height: 36px; border: 3px solid rgba(0, 136, 110, 0.133); border-top-color: rgb(0, 136, 110); border-radius: 50%; animation: spin 0.6s linear infinite;"
/>
`;

exports[`Design System — Component Snapshots > Loader > all sizes > loader-md 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  role="status"
  style="width: 24px; height: 24px; border: 3px solid rgba(0, 136, 110, 0.133); border-top-color: rgb(0, 136, 110); border-radius: 50%; animation: spin 0.6s linear infinite;"
/>
`;

exports[`Design System — Component Snapshots > Loader > all sizes > loader-sm 1`] = `
<div
  aria-busy="true"
  aria-label="Loading"
  role="status"
  style="width: 16px; height: 16px; border: 2px solid rgba(0, 136, 110, 0.133); border-top-color: rgb(0, 136, 110); border-radius: 50%; animation: spin 0.6s linear infinite;"
/>
`;

exports[`Design System — Component Snapshots > Modal > renders nothing when closed 1`] = `null`;

exports[`Design System — Component Snapshots > Modal > renders when open 1`] = `
<div
  aria-label="Test Modal"
  aria-modal="true"
  role="dialog"
  style="position: fixed; inset: 0; z-index: 400; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.3); padding: 16px; animation: fadeIn 200ms;"
>
  <div
    style="width: 100%; max-width: 480px; max-height: 90vh; overflow-y: auto; background: rgba(255, 255, 255, 0.92); border-radius: 20px; box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2); padding: 20px;"
  >
    <h2
      style="font-size: 1.125rem; font-weight: 700; color: rgb(26, 26, 36); margin: 0px 0px 12px;"
    >
      Test Modal
    </h2>
    <p>
      Content
    </p>
  </div>
</div>
`;

exports[`Design System — Component Snapshots > Select > default 1`] = `
<select
  style="width: 100%; padding: 8px 12px; font-size: 0.875rem; font-family: inherit; color: rgb(26, 26, 36); background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220); border-radius: 12px; outline: none; transition: border-color 150ms, box-shadow 150ms; box-sizing: border-box; cursor: pointer;"
>
  <option
    disabled=""
    value=""
  >
    Choose...
  </option>
  <option
    value="1"
  >
    Option 1
  </option>
  <option
    value="2"
  >
    Option 2
  </option>
</select>
`;

exports[`Design System — Component Snapshots > Select > error state 1`] = `
<select
  style="width: 100%; padding: 8px 12px; font-size: 0.875rem; font-family: inherit; color: rgb(26, 26, 36); background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(200, 32, 32); border-radius: 12px; outline: none; transition: border-color 150ms, box-shadow 150ms; box-sizing: border-box; cursor: pointer;"
>
  <option
    disabled=""
    value=""
  >
    Error
  </option>
  <option
    value="1"
  >
    Option 1
  </option>
  <option
    value="2"
  >
    Option 2
  </option>
</select>
`;

exports[`Design System — Component Snapshots > Skeleton > all variants > skeleton-circle 1`] = `
<div
  aria-hidden="true"
  style="background: rgba(0, 0, 0, 0.06); animation: pulse 1.5s 200ms cubic-bezier(0.4, 0, 1, 1) infinite; width: 40px; height: 40px; border-radius: 50%;"
/>
`;

exports[`Design System — Component Snapshots > Skeleton > all variants > skeleton-rect 1`] = `
<div
  aria-hidden="true"
  style="background: rgba(0, 0, 0, 0.06); animation: pulse 1.5s 200ms cubic-bezier(0.4, 0, 1, 1) infinite; width: 100%; height: 80px; border-radius: 8px;"
/>
`;

exports[`Design System — Component Snapshots > Skeleton > all variants > skeleton-text 1`] = `
<div
  aria-hidden="true"
  style="background: rgba(0, 0, 0, 0.06); animation: pulse 1.5s 200ms cubic-bezier(0.4, 0, 1, 1) infinite; width: 100%; height: 14px; border-radius: 8px;"
/>
`;

exports[`Design System — Component Snapshots > Surface > all variants > surface-base 1`] = `
<div
  style="background: rgb(244, 244, 248); border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);"
>
  Surface 
  base
</div>
`;

exports[`Design System — Component Snapshots > Surface > all variants > surface-glass 1`] = `
<div
  style="background: rgba(255, 255, 255, 0.7); border: 1px solid rgba(0, 0, 0, 0.06); border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);"
>
  Surface 
  glass
</div>
`;

exports[`Design System — Component Snapshots > Surface > all variants > surface-overlay 1`] = `
<div
  style="background: rgba(0, 0, 0, 0.3); border: 1px solid rgb(212, 212, 220); border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);"
>
  Surface 
  overlay
</div>
`;

exports[`Design System — Component Snapshots > Surface > all variants > surface-raised 1`] = `
<div
  style="background: rgba(255, 255, 255, 0.92); border: 1px solid rgb(212, 212, 220); border-radius: 16px; padding: 16px; transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);"
>
  Surface 
  raised
</div>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-accent 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(0, 136, 110); margin: 0px;"
>
  accent
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-danger 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(200, 32, 32); margin: 0px;"
>
  danger
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-info 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(0, 104, 168); margin: 0px;"
>
  info
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-muted 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(124, 124, 144); margin: 0px;"
>
  muted
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-primary 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  primary
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-secondary 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(74, 74, 92); margin: 0px;"
>
  secondary
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-success 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(22, 128, 60); margin: 0px;"
>
  success
</span>
`;

exports[`Design System — Component Snapshots > Text > all colors > text-color-warning 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(160, 112, 0); margin: 0px;"
>
  warning
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-body 1`] = `
<span
  style="font-size: 0.875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  body
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-bodySmall 1`] = `
<span
  style="font-size: 0.8125rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  bodySmall
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-button 1`] = `
<span
  style="font-size: 0.8125rem; font-weight: 600; line-height: 1.5; letter-spacing: 0.05em; color: rgb(26, 26, 36); margin: 0px;"
>
  button
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-caption 1`] = `
<span
  style="font-size: 0.6875rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  caption
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-display 1`] = `
<span
  style="font-size: 2rem; font-weight: 700; line-height: 1.2; letter-spacing: -0.02em; color: rgb(26, 26, 36); margin: 0px;"
>
  display
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-h1 1`] = `
<span
  style="font-size: 1.375rem; font-weight: 700; line-height: 1.2; letter-spacing: -0.02em; color: rgb(26, 26, 36); margin: 0px;"
>
  h1
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-h2 1`] = `
<span
  style="font-size: 1.125rem; font-weight: 600; line-height: 1.2; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  h2
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-h3 1`] = `
<span
  style="font-size: 1rem; font-weight: 600; line-height: 1.2; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  h3
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-label 1`] = `
<span
  style="font-size: 0.75rem; font-weight: 500; line-height: 1.5; letter-spacing: 0.05em; color: rgb(26, 26, 36); margin: 0px;"
>
  label
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-mono 1`] = `
<span
  style="font-family: "IBM Plex Mono", ui-monospace, monospace; font-size: 0.8125rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  mono
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-overline 1`] = `
<span
  style="font-size: 0.625rem; font-weight: 500; line-height: 1.5; letter-spacing: 0.1em; color: rgb(26, 26, 36); margin: 0px;"
>
  overline
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-stat 1`] = `
<span
  style="font-size: 1.125rem; font-weight: 700; line-height: 1.2; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  stat
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-subtitle 1`] = `
<span
  style="font-size: 0.8125rem; font-weight: 400; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  subtitle
</span>
`;

exports[`Design System — Component Snapshots > Text > all variants > text-title 1`] = `
<span
  style="font-size: 0.9375rem; font-weight: 500; line-height: 1.5; letter-spacing: 0; color: rgb(26, 26, 36); margin: 0px;"
>
  title
</span>
`;

exports[`Design System — Component Snapshots > Toast > all types > toast-error 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 8px; padding: 8px 12px; background: rgba(200, 32, 32, 0.08); border: 1px solid rgb(200, 32, 32); border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); font-family: inherit; font-size: 0.875rem; color: rgb(26, 26, 36); z-index: 500; pointer-events: auto;"
>
  <span
    style="width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: rgb(200, 32, 32); color: rgb(244, 244, 248); font-size: 0.65rem; font-weight: 800; flex-shrink: 0;"
  >
    ✕
  </span>
  <span
    style="flex: 1 1 0%; line-height: 1.4;"
  >
    error message
  </span>
</div>
`;

exports[`Design System — Component Snapshots > Toast > all types > toast-info 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 8px; padding: 8px 12px; background: rgba(0, 104, 168, 0.08); border: 1px solid rgb(0, 104, 168); border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); font-family: inherit; font-size: 0.875rem; color: rgb(26, 26, 36); z-index: 500; pointer-events: auto;"
>
  <span
    style="width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: rgb(0, 104, 168); color: rgb(244, 244, 248); font-size: 0.65rem; font-weight: 800; flex-shrink: 0;"
  >
    i
  </span>
  <span
    style="flex: 1 1 0%; line-height: 1.4;"
  >
    info message
  </span>
</div>
`;

exports[`Design System — Component Snapshots > Toast > all types > toast-success 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 8px; padding: 8px 12px; background: rgba(22, 128, 60, 0.08); border: 1px solid rgb(22, 128, 60); border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); font-family: inherit; font-size: 0.875rem; color: rgb(26, 26, 36); z-index: 500; pointer-events: auto;"
>
  <span
    style="width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: rgb(22, 128, 60); color: rgb(244, 244, 248); font-size: 0.65rem; font-weight: 800; flex-shrink: 0;"
  >
    ✓
  </span>
  <span
    style="flex: 1 1 0%; line-height: 1.4;"
  >
    success message
  </span>
</div>
`;

exports[`Design System — Component Snapshots > Toast > all types > toast-warning 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 8px; padding: 8px 12px; background: rgba(160, 112, 0, 0.08); border: 1px solid rgb(160, 112, 0); border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); font-family: inherit; font-size: 0.875rem; color: rgb(26, 26, 36); z-index: 500; pointer-events: auto;"
>
  <span
    style="width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: rgb(160, 112, 0); color: rgb(244, 244, 248); font-size: 0.65rem; font-weight: 800; flex-shrink: 0;"
  >
    !
  </span>
  <span
    style="flex: 1 1 0%; line-height: 1.4;"
  >
    warning message
  </span>
</div>
`;

exports[`Design System — Component Snapshots > Toast > with dismiss 1`] = `
<div
  role="alert"
  style="display: flex; align-items: center; gap: 8px; padding: 8px 12px; background: rgba(0, 104, 168, 0.08); border: 1px solid rgb(0, 104, 168); border-radius: 12px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15); font-family: inherit; font-size: 0.875rem; color: rgb(26, 26, 36); z-index: 500; pointer-events: auto;"
>
  <span
    style="width: 20px; height: 20px; display: flex; align-items: center; justify-content: center; border-radius: 50%; background: rgb(0, 104, 168); color: rgb(244, 244, 248); font-size: 0.65rem; font-weight: 800; flex-shrink: 0;"
  >
    i
  </span>
  <span
    style="flex: 1 1 0%; line-height: 1.4;"
  >
    Dismissible
  </span>
  <button
    aria-label="Dismiss"
    style="background: none; color: rgb(124, 124, 144); cursor: pointer; font-size: 0.85rem; padding: 2px; font-family: inherit;"
  >
    ✕
  </button>
</div>
`;
